modified style sheet

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <a href="recipes/lasagna.html" target="_blank" rel="noopenner noreferrer">Lasagna</a><br>
-    <a href="recipes/chicken_adobo.html" target="_blank">Chicken Adobo</a><br>
-    <a href="recipes/grilled_cheese.html" target="_blank">Grilled Cheese</a>
+    <h1 class="title">Recipes</h1>
+    <div class="content">
+    <a href="recipes/lasagna.html" target="_blank" class="link">Lasagna</a>
+    <a href="recipes/chicken_adobo.html" target="_blank" class="link">Chicken Adobo</a>
+    <a href="recipes/grilled_cheese.html" target="_blank" class="link">Grilled Cheese</a>
+    </div>
 </body>
 </html>
