--- a/recipes/grilled_cheese.html
+++ b/recipes/grilled_cheese.html
@@ -12,8 +12,8 @@
         <img src="../images/grilled_cheese.jpg" alt="a photo of grilled cheeese" class="img">
     </div>
     <div class="body">
-        <h2>How to make it</h2>
-        <p>Timeless yet always delicious, a grilled cheese sandwich will always hit the spot!</p>
+        <h2 class="instructions">How to make it</h2>
+        <p class="explanation">Timeless yet always delicious, a grilled cheese sandwich will always hit the spot!</p>
         <p><ul>
             <li>2 slices of bread</li>
             
