small edits to stylesheet, testing div centering

--- a/recipes/chicken_adobo.html
+++ b/recipes/chicken_adobo.html
@@ -7,11 +7,12 @@
     <title>Chicken Adobo</title>
 </head>
 <body>
+    <div class="everything">
     <div class="header">
         <h1 class="title">Chicken Adobo</h1>
         <img src="../images/chicken_adobo.webp" alt="a photo of chicken adobo" class="img">
-    </div><!--
-    --><div class="body">
+    </div>
+    <div class="body">
         <h2 class="instructions">How to make it</h2>
         
         <p class="explanation">Classic chicken adobo recipe that's simple to make and loved by all who try it. It has been modified to be a bit saucier than traditional adobo and is delicious served over rice.</p>
@@ -46,6 +47,7 @@
             
             <li>Return chicken to pan, increase heat to high, and bring to a boil. Reduce heat to medium-low, cover, and simmer until chicken is tender and cooked through, 35 to 40 minutes.</li>
             </p>
+    </div>
     </div>
 </body>
 </html>
