styled index page, added background photo, updated README

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Recipes</title>
 </head>
 <body>
+    <div class="page">
     <h1 class="title">Recipes</h1>
     <div class="content">
     <a href="recipes/lasagna.html" target="_blank" class="link">Lasagna</a>
     <a href="recipes/chicken_adobo.html" target="_blank" class="link">Chicken Adobo</a>
     <a href="recipes/grilled_cheese.html" target="_blank" class="link">Grilled Cheese</a>
+    </div>
     </div>
 </body>
 </html>
